# Exosphere-3DSimulator

./: .gitignore  README.MD  main.py  pyproject.toml  requirements.txt  run_simulation.py
src/exosphere/: constants.py  particles.py  visualizer.py
src/simulation/: config.py  satellite.py  visualization.py
