[project]
name = "Exosphere-3DSimulator"
version = "0.1.0"
description = "A particle simulator of the Earth's exosphere using PyVista."
readme = "README.md"
requires-python = ">=3.14.2"
license = {text = "MIT"}
authors = [
  {name = "PilotLeoYan", email = "leofabyano@gmail.com}
]
dependencies = [
    "EXOSpy==2.4",
    "matplotlib==3.10.8",
    "numpy==2.4.1",
    "scikit-learn==1.8.0",
    "scipy==1.17.0",
    "tqdm==4.67.1",
]

[project.urls]
"Homepage" = "https://github.com/PilotLeoYan/Exosphere-3DSimulator"